[Ticket Microservice] Updating filtering and sorting process